Inventory service phase 5